--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "abc",
   "version": "0.1.0",
+  "homepage": "https://sumitjoshi23.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
