--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abc",
   "version": "0.1.0",
-  "homepage": "https://sumitjoshi23.github.io/react-gh-pages",
+  "homepage": "https://sumitjoshi23.github.io/manufacAssessment",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
